--- a/trunk/DESCRIPTION
+++ b/trunk/DESCRIPTION
@@ -5,5 +5,14 @@ Version: 0.0.1
 Date: 2016-06-24
 Author: Alicia Schep
 Maintainer: Alicia Schep <schepa@gene.com>
-Description: more in detail description of what the package does (usually more than one line)
+Description: more in detail description of what the package does (usually more
+    than one line)
 License: file GNE_LICENSE
+Imports: 
+    rtracklayer,
+    GenomicRanges,
+    utils
+RoxygenNote: 5.0.1
+Suggests: 
+    testthat,
+    gChipseq
