Basic trackview functionalized
See trackview_testing.Rmd for basic execution.
Todo: 1. Additional functionalization for flexibility. 2. Add new trackviews.

git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@193680 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -2,7 +2,12 @@
 
 export(expandPairedTable)
 export(expandSampleTable)
+export(extendGRange)
 export(getChipFileInfo)
+export(getCoverageInRange)
+export(getGeneRange)
+export(getViewRange)
+export(igisExonlist)
 export(loadNarrowPeaks)
 export(plotGeneCoverage)
 export(readMacsPeaks)
@@ -10,4 +15,5 @@ export(renameMacsColname)
 import(GenomicRanges)
 import(Gviz)
 import(IRanges)
+import(biomaRt)
 import(gChipseq)
