minor changes mostly documentation
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@193974 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -11,6 +11,7 @@ export(getGeneRange)
 export(getSampleNames)
 export(getViewRange)
 export(igisExonlist)
+export(makeDataTracks)
 export(make_coverage_matrix)
 export(normalize_coverage_matrix)
 export(plotGeneCoverage)
@@ -19,6 +20,6 @@ export(renameMacsColname)
 import(ExpressionPlot)
 import(GenomicRanges)
 import(Gviz)
-import(IRanges)
+import(RColorBrewer)
 import(biomaRt)
 import(gChipseq)
