--- a/trunk/DESCRIPTION
+++ b/trunk/DESCRIPTION
@@ -3,15 +3,15 @@ Type: Package
 Title: what the package does (short one line)
 Version: 0.0.1
 Date: 2016-06-24
-Author: Alicia Schep
-Maintainer: Alicia Schep <schepa@gene.com>
-Description: more in detail description of what the package does (usually more
-    than one line)
+Author: Alicia Schep, Justin Finkle
+Maintainer: TBD
+Description: interactive visualization of ChIP-seq, ATAC-seq, RNA-seq, and other genomic data
 License: file GNE_LICENSE
 Imports: 
     rtracklayer,
     GenomicRanges,
-    Gviz
+    Gviz,
+    plotly
 RoxygenNote: 5.0.1
 Suggests: 
     testthat,
