Add preliminary SNP plotting
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@194065 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -5,6 +5,7 @@ export(addShortNames)
 export(expandPairedTable)
 export(expandSampleTable)
 export(extendGRange)
+export(getChipFileInfo)
 export(getCoverageInRange)
 export(getExpressionSet)
 export(getGeneRange)
