--- a/trunk/DESCRIPTION
+++ b/trunk/DESCRIPTION
@@ -1,18 +1,20 @@
 Package: chipVis
 Type: Package
-Title: what the package does (short one line)
+Title: interactive visualization of genomics data
 Version: 0.0.1
 Date: 2016-06-24
 Author: Alicia Schep, Justin Finkle
-Maintainer: TBD
+Maintainer: TBD <tbd@gene.com>
 Description: interactive visualization of ChIP-seq, ATAC-seq, RNA-seq, and other genomic data
 License: file GNE_LICENSE
 Imports: 
     rtracklayer,
     GenomicRanges,
     Gviz,
-    plotly
+    plotly,
+    flashClust
 RoxygenNote: 5.0.1
 Suggests: 
+    shiny,
     testthat,
     gChipseq
