checking in documentation
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@194068 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(addExpressionIdentifier)
 export(addShortNames)
+export(cluster_heatmap)
 export(expandPairedTable)
 export(expandSampleTable)
 export(extendGRange)
@@ -14,13 +15,17 @@ export(getViewRange)
 export(igisExonlist)
 export(makeDataTracks)
 export(make_coverage_matrix)
+export(make_coverage_tracks)
+export(multi_coverage_plot)
 export(normalize_coverage_matrix)
 export(plotGeneCoverage)
 export(readMacsPeaks)
 export(renameMacsColname)
-import(ExpressionPlot)
+export(single_coverage_heatmap)
+export(single_coverage_plot)
 import(GenomicRanges)
 import(Gviz)
 import(RColorBrewer)
 import(biomaRt)
 import(gChipseq)
+import(shiny)
