Bugs squashed! Chromosomes for all tracks must be the same or data may not be shown
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@194143 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -11,6 +11,7 @@ export(getCoverageInRange)
 export(getExpressionSet)
 export(getGeneRange)
 export(getSampleNames)
+export(getScalingFactor)
 export(getViewRange)
 export(igisExonlist)
 export(makeDataTracks)
@@ -23,9 +24,10 @@ export(readMacsPeaks)
 export(renameMacsColname)
 export(single_coverage_heatmap)
 export(single_coverage_plot)
+import(ExpressionPlot)
 import(GenomicRanges)
 import(Gviz)
 import(RColorBrewer)
 import(biomaRt)
 import(gChipseq)
-import(shiny)
+import(plotly)
