fixes to take into account name changes for some functions
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@194620 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/DESCRIPTION
+++ b/trunk/DESCRIPTION
@@ -12,7 +12,8 @@ Imports:
     GenomicRanges,
     Gviz,
     plotly,
-    flashClust
+    flashClust,
+    iHeatmapR
 RoxygenNote: 5.0.1
 Suggests: 
     shiny,
