--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -25,11 +25,13 @@ export(make_coverage_tracks)
 export(make_data_tracks)
 export(make_main_hm)
 export(multi_coverage_plot)
+export(new_single_coverage_heatmap)
 export(normalize_coverage_matrix)
 export(plot_iHeatmap)
 export(plot_track_view)
 export(readMacsPeaks)
 export(renameMacsColname)
+export(rna_chip_tracks_plot)
 export(single_coverage_heatmap)
 export(single_coverage_plot)
 import(GenomicRanges)
