SNP prototype; smash bugs
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@194628 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -16,6 +16,7 @@ export(get_gene_range)
 export(get_sample_names)
 export(get_scaling_factor)
 export(get_view_range)
+export(load_snp_data)
 export(make_coverage_matrix)
 export(make_coverage_tracks)
 export(make_data_tracks)
