--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -24,6 +24,7 @@ export(make_data_tracks)
 export(make_gatrack)
 export(make_grtrack)
 export(make_snp_track)
+export(make_track_function)
 export(make_tss_track)
 export(multi_coverage_heatmap)
 export(multi_coverage_plot)
