--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -13,13 +13,14 @@ export(expandSampleTable)
 export(extend_grange)
 export(get_chip_file_info)
 export(get_coverage_in_range)
-export(get_exons)
+export(get_db_class)
 export(get_expression_set)
-export(get_gene_range)
 export(get_sample_names)
 export(get_scaling_factor)
+export(get_symbol_range)
 export(get_view_range)
 export(load_snp_data)
+export(load_tx_data)
 export(make_coverage_matrix)
 export(make_coverage_tracks)
 export(make_data_tracks)
@@ -42,7 +43,6 @@ export(sort_snps)
 import(GenomicRanges)
 import(Gviz)
 import(RColorBrewer)
-import(biomaRt)
 import(gChipseq)
 import(iHeatmapR)
 import(plotly)
