--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -18,6 +18,7 @@ export(get_expression_set)
 export(get_sample_names)
 export(get_scaling_factor)
 export(get_symbol_range)
+export(get_tx_annotation)
 export(get_view_range)
 export(load_snp_data)
 export(load_tx_data)
@@ -46,4 +47,5 @@ import(RColorBrewer)
 import(gChipseq)
 import(iHeatmapR)
 import(plotly)
+import(rtracklayer)
 import(shiny)
