--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -3,25 +3,23 @@
 export(add_coverage_heatmap)
 export(add_dist_to_tss)
 export(add_expression_identifier)
+export(add_multi_coverage_heatmap)
+export(add_rna_heatmap)
 export(add_short_names)
 export(aggregate_profile_plot)
 export(cluster_heatmap)
 export(cluster_heatmap2)
+export(compute_regulatory_potential)
 export(dcolorscale)
 export(expandPairedTable)
 export(expandSampleTable)
-export(extend_grange)
 export(get_chip_file_info)
-export(get_coverage_in_range)
-export(get_db_class)
 export(get_expression_set)
 export(get_sample_names)
 export(get_scaling_factor)
-export(get_symbol_range)
+export(get_tss_from_txdb)
 export(get_tx_annotation)
-export(get_view_range)
 export(load_snp_data)
-export(load_tx_data)
 export(make_coverage_matrix)
 export(make_coverage_tracks)
 export(make_data_tracks)
@@ -38,6 +36,7 @@ export(plot_track_view)
 export(readMacsPeaks)
 export(renameMacsColname)
 export(rna_chip_tracks_plot)
+export(rna_heatmap)
 export(single_coverage_heatmap)
 export(single_coverage_plot)
 export(sort_snps)
@@ -47,5 +46,4 @@ import(RColorBrewer)
 import(gChipseq)
 import(iHeatmapR)
 import(plotly)
-import(rtracklayer)
 import(shiny)
