initial commit of regulatory potential function
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@196046 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/DESCRIPTION
+++ b/trunk/DESCRIPTION
@@ -12,8 +12,10 @@ Imports:
     GenomicRanges,
     Gviz,
     plotly,
-    flashClust,
-    iHeatmapR
+    fastcluster,
+    iHeatmapR,
+    annotate,
+    stringr
 RoxygenNote: 5.0.1
 Suggests: 
     shiny,
