--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -13,13 +13,19 @@ export(compute_regulatory_potential)
 export(dcolorscale)
 export(expandPairedTable)
 export(expandSampleTable)
+export(extend_grange)
 export(get_chip_file_info)
+export(get_coverage_in_range)
+export(get_db_class)
 export(get_expression_set)
 export(get_sample_names)
 export(get_scaling_factor)
+export(get_symbol_range)
 export(get_tss_from_txdb)
 export(get_tx_annotation)
+export(get_view_range)
 export(load_snp_data)
+export(load_tx_data)
 export(make_coverage_matrix)
 export(make_coverage_tracks)
 export(make_data_tracks)
@@ -32,6 +38,7 @@ export(multi_coverage_heatmap)
 export(multi_coverage_plot)
 export(new_single_coverage_heatmap)
 export(normalize_coverage_matrix)
+export(plot_browserly_tracks)
 export(plot_track_view)
 export(readMacsPeaks)
 export(renameMacsColname)
@@ -46,4 +53,5 @@ import(RColorBrewer)
 import(gChipseq)
 import(iHeatmapR)
 import(plotly)
+import(rtracklayer)
 import(shiny)
