--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -3,8 +3,8 @@
 export(add_coverage_heatmap)
 export(add_dist_to_tss)
 export(add_expression_identifier)
+export(add_genomics_heatmap)
 export(add_multi_coverage_heatmap)
-export(add_rna_heatmap)
 export(add_short_names)
 export(aggregate_profile_plot)
 export(cluster_heatmap)
@@ -14,6 +14,7 @@ export(dcolorscale)
 export(expandPairedTable)
 export(expandSampleTable)
 export(extend_grange)
+export(genomics_heatmap)
 export(get_chip_file_info)
 export(get_coverage_in_range)
 export(get_db_class)
@@ -26,6 +27,7 @@ export(get_tx_annotation)
 export(get_view_range)
 export(load_snp_data)
 export(load_tx_data)
+export(make_browserly_function)
 export(make_coverage_matrix)
 export(make_coverage_tracks)
 export(make_data_tracks)
@@ -43,7 +45,6 @@ export(plot_track_view)
 export(readMacsPeaks)
 export(renameMacsColname)
 export(rna_chip_tracks_plot)
-export(rna_heatmap)
 export(single_coverage_heatmap)
 export(single_coverage_plot)
 export(sort_snps)
