update to remove gchipseq dependency, all gchipseq function should be copied over into gChipseq_functions
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@196284 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/DESCRIPTION
+++ b/trunk/DESCRIPTION
@@ -15,9 +15,9 @@ Imports:
     fastcluster,
     iHeatmapR,
     annotate,
-    stringr
+    stringr,
+    bamsignals
 RoxygenNote: 5.0.1
 Suggests: 
     shiny,
-    testthat,
-    gChipseq
+    testthat
