change in getting tx annotation to also get transcripts, no longer pass db_object to other downstream trackview or browser_ly functions
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@196358 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -48,10 +48,11 @@ export(rna_chip_tracks_plot)
 export(single_coverage_heatmap)
 export(single_coverage_plot)
 export(sort_snps)
+export(tssFromTxdb)
+import(GenomicFeatures)
 import(GenomicRanges)
 import(Gviz)
 import(RColorBrewer)
-import(gChipseq)
 import(iHeatmapR)
 import(plotly)
 import(rtracklayer)
