Change colors for track heatmaps of interactive poster
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@196421 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -25,6 +25,9 @@ export(get_symbol_range)
 export(get_tss_from_txdb)
 export(get_tx_annotation)
 export(get_view_range)
+export(heatmap_click)
+export(heatmap_to_browserly_shiny)
+export(heatmap_to_tracks_shiny)
 export(load_snp_data)
 export(load_tx_data)
 export(make_browserly_function)
