Overhaul/synthesis of method used for obtaining coverage for tracks, corresponding changes to trackview and browserly functions, as well as update to browserly strand information display
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@196622 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -51,6 +51,7 @@ export(rna_chip_tracks_plot)
 export(single_coverage_heatmap)
 export(single_coverage_plot)
 export(sort_snps)
+export(subset_coverage)
 export(tssFromTxdb)
 import(GenomicFeatures)
 import(GenomicRanges)
