--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -7,6 +7,7 @@ export(add_genomics_heatmap)
 export(add_multi_coverage_heatmap)
 export(add_short_names)
 export(aggregate_profile_plot)
+export(avg_peak_in_range)
 export(cluster_heatmap)
 export(cluster_heatmap2)
 export(compute_regulatory_potential)
@@ -30,12 +31,14 @@ export(heatmap_to_browserly_shiny)
 export(heatmap_to_tracks_shiny)
 export(load_snp_data)
 export(load_tx_data)
+export(log_scale_range)
 export(make_browserly_function)
 export(make_coverage_matrix)
 export(make_coverage_tracks)
 export(make_data_tracks)
 export(make_gatrack)
 export(make_grtrack)
+export(make_lines)
 export(make_snp_track)
 export(make_track_function)
 export(make_tss_track)
@@ -43,6 +46,7 @@ export(multi_coverage_heatmap)
 export(multi_coverage_plot)
 export(new_single_coverage_heatmap)
 export(normalize_coverage_matrix)
+export(peaks_per_sample)
 export(plot_browserly_tracks)
 export(plot_track_view)
 export(readMacsPeaks)
