update browser_ly for mesoscale views
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@196969 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -6,6 +6,7 @@ export(add_expression_identifier)
 export(add_genomics_heatmap)
 export(add_multi_coverage_heatmap)
 export(add_short_names)
+export(add_tx_shapes)
 export(aggregate_profile_plot)
 export(avg_peak_in_range)
 export(cluster_heatmap)
@@ -42,14 +43,15 @@ export(make_lines)
 export(make_snp_track)
 export(make_track_function)
 export(make_tss_track)
+export(match_tx_to_gene)
 export(multi_coverage_heatmap)
 export(multi_coverage_plot)
 export(new_single_coverage_heatmap)
 export(normalize_coverage_matrix)
-export(peaks_per_sample)
 export(plot_browserly_tracks)
 export(plot_track_view)
 export(readMacsPeaks)
+export(read_macs_peaks)
 export(renameMacsColname)
 export(rna_chip_tracks_plot)
 export(single_coverage_heatmap)
