--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -48,6 +48,7 @@ export(multi_coverage_heatmap)
 export(multi_coverage_plot)
 export(new_single_coverage_heatmap)
 export(normalize_coverage_matrix)
+export(peaks_per_sample)
 export(plot_browserly_tracks)
 export(plot_track_view)
 export(readMacsPeaks)
