updates to heatmap functions to remove legacy functions, update current functions for newest iheatmap changes to data structure
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@197294 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -8,9 +8,13 @@ export(add_multi_coverage_heatmap)
 export(add_short_names)
 export(add_tx_shapes)
 export(aggregate_profile_plot)
+export(aggregate_shiny)
+export(aggregate_shiny_plus)
+export(aggregate_to_heatmap_shiny)
+export(aggregate_to_heatmap_to_browserly_shiny)
+export(aggregate_to_heatmap_to_tracks_shiny)
 export(avg_peak_in_range)
-export(cluster_heatmap)
-export(cluster_heatmap2)
+export(browserly_cvg_track)
 export(compute_regulatory_potential)
 export(dcolorscale)
 export(expandPairedTable)
@@ -45,18 +49,14 @@ export(make_track_function)
 export(make_tss_track)
 export(match_tx_to_gene)
 export(multi_coverage_heatmap)
-export(multi_coverage_plot)
-export(new_single_coverage_heatmap)
 export(normalize_coverage_matrix)
 export(peaks_per_sample)
-export(plot_browserly_tracks)
+export(plot_single_locus)
 export(plot_track_view)
 export(readMacsPeaks)
 export(read_macs_peaks)
 export(renameMacsColname)
-export(rna_chip_tracks_plot)
 export(single_coverage_heatmap)
-export(single_coverage_plot)
 export(sort_snps)
 export(subset_coverage)
 export(tssFromTxdb)
@@ -65,6 +65,4 @@ import(GenomicRanges)
 import(Gviz)
 import(RColorBrewer)
 import(iHeatmapR)
-import(plotly)
 import(rtracklayer)
-import(shiny)
