update to reflect new name of iheatmapr package
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@197335 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -64,5 +64,5 @@ import(GenomicFeatures)
 import(GenomicRanges)
 import(Gviz)
 import(RColorBrewer)
-import(iHeatmapR)
+import(iheatmapr)
 import(rtracklayer)
