Add mesoscale to browserly
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@197514 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -21,6 +21,7 @@ export(expandPairedTable)
 export(expandSampleTable)
 export(extend_grange)
 export(genomics_heatmap)
+export(get_centered_gene_info)
 export(get_chip_file_info)
 export(get_coverage_in_range)
 export(get_db_class)
