Add snp and expression data to tracks
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@197604 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -27,6 +27,7 @@ export(get_db_class)
 export(get_expression_set)
 export(get_sample_names)
 export(get_scaling_factor)
+export(get_snps_in_range)
 export(get_symbol_range)
 export(get_tss_from_txdb)
 export(get_tx_annotation)
