Add documentation to browserly_utils. Minor refactor. Add browserly_testing.html as reference
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@197624 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -45,6 +45,7 @@ export(make_data_tracks)
 export(make_gatrack)
 export(make_grtrack)
 export(make_lines)
+export(make_plotly_color)
 export(make_snp_track)
 export(make_track_function)
 export(make_tss_track)
