many updates, update to heatmaps, new vignette, bugfixes for track functions
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@206355 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/NAMESPACE
+++ b/trunk/NAMESPACE
@@ -15,6 +15,7 @@ export(aggregate_to_heatmap_to_tracks_shiny)
 export(avg_peak_in_range)
 export(browserly_cvg_track)
 export(compute_regulatory_potential)
+export(coverage_heatmap)
 export(dcolorscale)
 export(expandPairedTable)
 export(expandSampleTable)
@@ -58,13 +59,16 @@ export(plot_track_view)
 export(readMacsPeaks)
 export(read_macs_peaks)
 export(renameMacsColname)
-export(single_coverage_heatmap)
 export(sort_snps)
 export(subset_coverage)
 export(tssFromTxdb)
+import(GenomeInfoDb)
 import(GenomicFeatures)
 import(GenomicRanges)
 import(Gviz)
 import(RColorBrewer)
 import(iheatmapr)
 import(rtracklayer)
+importFrom(GenomicRanges,distanceToNearest)
+importFrom(bamsignals,alignSignals)
+importFrom(bamsignals,bamCoverage)
