--- a/trunk/DESCRIPTION
+++ b/trunk/DESCRIPTION
@@ -1,10 +1,15 @@
 Package: chipVis
 Type: Package
 Title: interactive visualization of genomics data
-Version: 0.0.2
+Version: 0.1.0.9999
 Date: 2016-06-24
-Author: Alicia Schep, Justin Finkle
-Maintainer: TBD <tbd@gene.com>
+Authors@R: c(person("Alicia", "Schep", email = "aschep@gmail.com",
+                  role = c("aut", "cre")),
+              person("Justin", "Finkle", 
+                  role = c("aut")),
+              person("Sarah","Kummerfeld", email = "kummerfeld.sarah@gene.com",
+                  role = c("aut")),
+              person("Genentech", role = "cph"))
 Description: interactive visualization of ChIP-seq, ATAC-seq, RNA-seq, and other genomic data
 License: file GNE_LICENSE
 Imports: 
@@ -17,7 +22,7 @@ Imports:
     annotate,
     stringr,
     bamsignals
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
 Suggests: 
     shiny,
     testthat
