--- a/chipvis/NAMESPACE
+++ b/chipvis/NAMESPACE
@@ -38,6 +38,7 @@ export(heatmap_to_browserly_shiny)
 export(heatmap_to_tracks_shiny)
 export(load_snp_data)
 export(load_tx_data)
+export(log10rowMeans)
 export(log_scale_range)
 export(make_browserly_function)
 export(make_coverage_matrix)
@@ -62,13 +63,17 @@ export(renameMacsColname)
 export(sort_snps)
 export(subset_coverage)
 export(tssFromTxdb)
-import(GenomeInfoDb)
-import(GenomicFeatures)
 import(GenomicRanges)
 import(Gviz)
-import(RColorBrewer)
 import(iheatmapr)
 import(rtracklayer)
 importFrom(GenomicRanges,distanceToNearest)
+importFrom(OrganismDbi,select)
+importFrom(RColorBrewer,brewer.pal)
+importFrom(RColorBrewer,brewer.pal.info)
+importFrom(S4Vectors,split)
 importFrom(bamsignals,alignSignals)
 importFrom(bamsignals,bamCoverage)
+importFrom(biovizBase,mold)
+importFrom(dplyr,slice)
+importFrom(dplyr,summarize)
