--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: chipVis
 Type: Package
 Title: interactive visualization of genomics data
-Version: 0.1.0.9999
+Version: 0.1.1.9999
 Date: 2016-06-24
 Authors@R: c(person("Alicia", "Schep", email = "aschep@gmail.com",
                   role = c("aut", "cre")),
@@ -21,8 +21,12 @@ Imports:
     iheatmapr,
     annotate,
     stringr,
-    bamsignals
+    bamsignals,
+    genomation,
+    OrganismDbi
 RoxygenNote: 6.0.1
 Suggests: 
     shiny,
-    testthat
+    testthat,
+    genomation,
+    genomationData
