--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,34 +16,33 @@ export(coverage_heatmap)
 export(dcolorscale)
 export(expandPairedTable)
 export(expandSampleTable)
+export(fetch_view_range)
 export(genomics_heatmap)
 export(get_centered_gene_info)
 export(get_snps_in_range)
 export(get_tss_from_txdb)
-export(get_tx_annotation)
 export(heatmap_click)
 export(heatmap_to_browserly_shiny)
 export(heatmap_to_tracks_shiny)
-export(load_tx_data)
 export(log10rowMeans)
 export(make_browserly_function)
 export(make_coverage_matrix)
-export(make_coverage_tracks)
 export(make_plotly_color)
-export(match_tx_to_gene)
-export(normalize_coverage_matrix)
+export(make_view_range)
 export(plot_multiple_genes)
 export(plot_single_locus)
 export(readMacsPeaks)
 export(renameMacsColname)
-export(subset_coverage)
 export(tssFromTxdb)
+exportMethods(add_iheatmap)
+exportMethods(iheatmap)
+exportMethods(make_summary_plotter)
 exportMethods(make_trace)
+exportMethods(make_track_plotter)
+exportMethods(normalize_coverage_matrix)
 exportMethods(to_widget)
-import(GenomeInfoDb)
 import(GenomicFeatures)
 import(GenomicRanges)
-import(dplyr)
 import(iheatmapr)
 importClassesFrom(genomation,ScoreMatrixList)
 importFrom(GenomicRanges,distanceToNearest)
