update description, vignette, docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ exportMethods(unpack_transcripts)
 import(GenomicRanges)
 import(SummarizedExperiment)
 import(iheatmapr)
+import(shiny)
 importClassesFrom(GenomicFeatures,TxDb)
 importClassesFrom(OrganismDbi,OrganismDb)
 importClassesFrom(genomation,ScoreMatrix)
