--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: GenomicWidgets
 Type: Package
 Title: interactive visualization of genomics data
-Version: 0.1.1.9999
+Version: 0.2.1.9999
 Date: 2016-06-24
 Authors@R: c(person("Alicia", "Schep", email = "aschep@gmail.com",
                   role = c("aut", "cre")),
@@ -11,22 +11,33 @@ Authors@R: c(person("Alicia", "Schep", email = "aschep@gmail.com",
               person("Sarah","Kummerfeld", email = "kummerfeld.sarah@gene.com",
                   role = c("aut")),
               person("Genentech", role = "cph"))
-Description: interactive visualization of ChIP-seq, ATAC-seq, RNA-seq, and other genomic data
+Description: Package for creating interactive visualizations of ChIP-seq, 
+  ATAC-seq, RNA-seq, and other genomic data.  Includes function for making shiny 
+  app linking heatmaps to local track views. 
 License: file GNE_LICENSE
+Depends: 
+  R (>= 2.10)
 Imports: 
     rtracklayer,
     GenomicRanges,
-    plotly,
+    RColorBrewer,
+    S4Vectors,
+    dplyr,
+    htmltools,
+    jsonlite,
+    purrr,
     iheatmapr,
     annotate,
     stringr,
     bamsignals,
     OrganismDbi,
     SummarizedExperiment,
-    GenomicFeatures
+    GenomicFeatures,
+    genomation,
+    htmlwidgets,
+    knitr,
+    shiny
 RoxygenNote: 6.0.1
 Suggests: 
-    shiny,
     testthat,
-    genomation,
     genomationData
