--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,18 +6,9 @@ S3method(knit_print,LocusViewList)
 export()
 export(GenomicWidgetsOutput)
 export(add_coverage_heatmap)
-export(add_dist_to_tss)
-export(aggregate_profile_plot)
-export(aggregate_shiny)
-export(aggregate_shiny_plus)
-export(aggregate_to_heatmap_shiny)
-export(aggregate_to_heatmap_to_browserly_shiny)
-export(aggregate_to_heatmap_to_tracks_shiny)
-export(compute_regulatory_potential)
 export(coverage_heatmap)
 export(dcolorscale)
 export(fetch_view_range)
-export(get_tss_from_txdb)
 export(heatmap_click)
 export(heatmap_to_tracks_shiny)
 export(log10rowMeans)
@@ -30,23 +21,39 @@ exportMethods(add_iheatmap)
 exportMethods(coverage_heatmap)
 exportMethods(iheatmap)
 exportMethods(make_summary_plotter)
-exportMethods(make_trace)
 exportMethods(make_track_plotter)
 exportMethods(normalize_coverage_matrix)
 exportMethods(to_widget)
 exportMethods(unpack_transcripts)
+import(BiocGenerics)
+import(GenomeInfoDb)
+import(GenomicFeatures)
 import(GenomicRanges)
 import(SummarizedExperiment)
 import(iheatmapr)
-import(shiny)
 importClassesFrom(GenomicFeatures,TxDb)
+importClassesFrom(GenomicRanges,GRanges)
 importClassesFrom(OrganismDbi,OrganismDb)
 importClassesFrom(genomation,ScoreMatrix)
 importClassesFrom(genomation,ScoreMatrixList)
-importFrom(GenomicRanges,distanceToNearest)
+importFrom(IRanges,IRanges)
 importFrom(bamsignals,alignSignals)
 importFrom(bamsignals,bamCoverage)
+importFrom(grDevices,col2rgb)
+importFrom(grDevices,rainbow)
+importFrom(grDevices,rgb)
+importFrom(graphics,layout)
+importFrom(graphics,text)
 importFrom(htmlwidgets,shinyRenderWidget)
 importFrom(htmlwidgets,shinyWidgetOutput)
 importFrom(knitr,knit_print)
+importFrom(methods,"slot<-")
+importFrom(methods,as)
+importFrom(methods,is)
+importFrom(methods,new)
+importFrom(methods,slot)
+importFrom(stats,cutree)
+importFrom(stats,kmeans)
+importFrom(stats,quantile)
+importFrom(utils,modifyList)
 importMethodsFrom(iheatmapr,make_trace)
