update internal ViewRange class, add and cleanup more documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 S3method(knit_print,GenomeTrackWidget)
 S3method(knit_print,LocusSummaryList)
 S3method(knit_print,LocusViewList)
-export()
 export(GenomicWidgetsOutput)
 export(add_coverage_heatmap)
 export(coverage_heatmap)
@@ -15,8 +14,8 @@ export(log10rowMeans)
 export(make_coverage_matrix)
 export(make_plotly_color)
 export(make_track_plus_summary_plotter)
-export(make_view_range)
 export(renderGenomicWidgets)
+exportMethods(add_coverage_heatmap)
 exportMethods(add_iheatmap)
 exportMethods(coverage_heatmap)
 exportMethods(iheatmap)
@@ -25,18 +24,18 @@ exportMethods(make_track_plotter)
 exportMethods(normalize_coverage_matrix)
 exportMethods(to_widget)
 exportMethods(unpack_transcripts)
-import(BiocGenerics)
 import(GenomeInfoDb)
 import(GenomicFeatures)
 import(GenomicRanges)
 import(SummarizedExperiment)
 import(iheatmapr)
 importClassesFrom(GenomicFeatures,TxDb)
-importClassesFrom(GenomicRanges,GRanges)
 importClassesFrom(OrganismDbi,OrganismDb)
 importClassesFrom(genomation,ScoreMatrix)
 importClassesFrom(genomation,ScoreMatrixList)
 importFrom(IRanges,IRanges)
+importFrom(IRanges,subsetByOverlaps)
+importFrom(S4Vectors,endoapply)
 importFrom(bamsignals,alignSignals)
 importFrom(bamsignals,bamCoverage)
 importFrom(grDevices,col2rgb)
