--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,7 @@
 Package: GenomicWidgets
 Type: Package
 Title: interactive visualization of genomics data
-Version: 0.2.3.9999
-Date: 2016-06-24
+Version: 0.2.4
 Authors@R: c(person("Alicia", "Schep", email = "aschep@gmail.com",
                   role = c("aut", "cre")),
               person("Justin", "Finkle", 
@@ -36,7 +35,6 @@ Imports:
     genomation,
     htmlwidgets,
     knitr,
-    shiny,
     methods,
     stats,
     graphics
@@ -49,5 +47,7 @@ Suggests:
     TxDb.Hsapiens.UCSC.hg19.knownGene,
     AnnotationDbi,
     AnnotationHub,
-    dplyr
+    dplyr,
+    shiny
 VignetteBuilder: knitr
+ByteCompile: TRUE
