major update to track plotting user interface

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,15 +12,15 @@ export(heatmap_to_tracks_shiny)
 export(log10rowMeans)
 export(make_coverage_matrix)
 export(make_plotly_color)
-export(make_track_plus_summary_plotter)
 export(renderGenomicWidgets)
 exportMethods(add_coverage_heatmap)
 exportMethods(add_iheatmap)
 exportMethods(coverage_heatmap)
 exportMethods(iheatmap)
-exportMethods(make_summary_plotter)
-exportMethods(make_track_plotter)
 exportMethods(normalize_coverage_matrix)
+exportMethods(plot_tracks)
+exportMethods(set_summary_parameters)
+exportMethods(set_track_parameters)
 exportMethods(to_widget)
 exportMethods(unpack_transcripts)
 import(GenomeInfoDb)
