add options for x axis for tracks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ import(SummarizedExperiment)
 import(iheatmapr)
 importClassesFrom(GenomicFeatures,TxDb)
 importClassesFrom(OrganismDbi,OrganismDb)
+importClassesFrom(S4Vectors,SimpleList)
 importClassesFrom(genomation,ScoreMatrix)
 importClassesFrom(genomation,ScoreMatrixList)
 importFrom(IRanges,IRanges)
