--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,6 @@ export(heatmap_click)
 export(heatmap_to_tracks_shiny)
 export(log10rowMeans)
 export(make_coverage_matrix)
-export(make_plotly_color)
 export(renderGenomicWidgets)
 exportMethods(add_coverage_heatmap)
 exportMethods(add_iheatmap)
@@ -23,6 +22,7 @@ exportMethods(set_summary_parameters)
 exportMethods(set_track_parameters)
 exportMethods(to_widget)
 exportMethods(unpack_transcripts)
+import(BiocGenerics)
 import(GenomeInfoDb)
 import(GenomicFeatures)
 import(GenomicRanges)
